Modify model for connection powershell